force-app/src/objects/TR1__Related_Job__c.object
<CustomObject>
    <fields>
        <fullName>TR1__Job__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>The main Job where this Related Job Record belongs to.</description>
        <inlineHelpText>The main Job where this Related Job Record belongs to.</inlineHelpText>
        <label>Job</label>
        <referenceTo>TR1__Job__c</referenceTo>
        <relationshipLabel>Related Jobs</relationshipLabel>
        <relationshipName>Job</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TR1__Notes__c</fullName>
        <description>Additional notes for this Related Job record.</description>
        <inlineHelpText>Additional notes for this Related Job record.</inlineHelpText>
        <label>Notes</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>TR1__Related_to_Job__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The related Job which the main one is related to.</description>
        <inlineHelpText>The related Job which the main one is related to.</inlineHelpText>
        <label>Related to Job</label>
        <referenceTo>TR1__Job__c</referenceTo>
        <relationshipLabel>Related Jobs (Related to Job)</relationshipLabel>
        <relationshipName>Related_Jobs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TR1__Status__c</fullName>
        <description>Indicates the status of the relationship between the main and related jobs.</description>
        <inlineHelpText>Indicates the status of the relationship between the main and related jobs.</inlineHelpText>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Research Started</fullName>
                    <default>true</default>
                    <label>Research Started</label>
                </value>
                <value>
                    <fullName>Research in Progress</fullName>
                </value>
                <value>
                    <fullName>Research Complete</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Related Job</label>
    <nameField>
        <displayFormat>RJ-{00000000}</displayFormat>
        <label>Related Job Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Related Jobs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>